tests/specs/ecosystem/zeppet/actions/2_1_3.test
zeppet/actions/2.1.3
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/index.ts:5:40

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/index.ts:5:92

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  T extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:7:13

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  T extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:13:13

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  T extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:18:13

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
  K extends keyof HTMLElementEventMap
                  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:20:19

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
>(event: K, observer: Observer<V>, mutateFn: (prev: V, event: HTMLElementEventMap[K], element: T) => V): Action<T> => ({}) as never;
                                                              ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:21:63

TS2304 [ERROR]: Cannot find name 'HTMLInputElement'.
export const bindInput = <T extends HTMLInputElement>(obs: Observer<string>): Action<T> => ({}) as never;
                                    ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:22:37

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  T extends HTMLElement,
            ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:24:13

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
  K extends keyof HTMLElementTagNameMap,
                  ~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:25:19

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/src/index.ts:27:93

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/src/index.ts:27:122

Found 12 errors.

error: Type checking failed.

